# unified-agent-instructions

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  LICENSE  README.md  opencode.json  pyproject.toml
.claude/: settings.json
.github/instructions/: markdown.instructions.md  python.instructions.md  shell.instructions.md
docs/adrs/: 0001-record-architecture-decisions.md  0002-use-fastapi-and-sqlmodel.md  0003-use-uv-python-and-src-layout.md  0004-use-ruff-for-linting-and-formatting.md  0005-separate-table-models-from-api-schemas.md  0006-use-dependency-injection-for-sessions.md  0007-test-against-throwaway-databases.md  0008-adopt-defensive-shell-scripting-standards.md  0009-loan-lifecycle-invariants.md
src/: README.md
src/bookshelf/: __init__.py  __main__.py  database.py  main.py  models.py  seed.py
src/bookshelf/data/: seed_data.json
src/bookshelf/routers/: __init__.py  authors.py  books.py  loans.py
