[project]
name = "bookshelf-api"
version = "0.1.0"
description = "Example FastAPI Bookshelf/Library API used to demonstrate agent instruction, agent, and context files."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[project.scripts]
bookshelf = "bookshelf.__main__:main"
bookshelf-seed = "bookshelf.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookshelf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
